# fire

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  ios-release-artifacts.yml  ios-testflight.yml  native.yml  rust.yml
docs/: backend-api.md
docs/architecture/: 2026-06-05-rich-text-and-state-observer-design.md  2026-06-17-unified-onboarding-launch-design.md  developer-page-and-chat-im-design.md  discourse-startup-implementation-plan.md  discourse-webview-login-implementation-plan.md  fire-native-architecture.md  fire-native-workspace.md  ios-apm-beta-foundation.md  ios-auth-alignment-plan.md  ios-auth-cookie-invalidation-fix.md  ios-auth-cookie-rotation-recovery-plan.md  ios-auth-read-path-resync.md  ios-beta-delivery-plan.md  ios-cloudflare-silent-refresh.md  ios-listkit-home.md  ios-store-split.md  ios-testflight-release.md  ios-topic-detail-loading-and-notification-routing.md  ios-topic-detail-uikit-texture-design.md  login-cf-cookie-v0218-migration-plan.md  native-image-pipeline-plan.md  notification-tap-through.md  profile-page-redesign.md  uniffi-multi-namespace-split.md
docs/backend-api/: 01-access-and-conventions.md  02-common-models.md  03-bootstrap-and-site.md  04-topics-and-posts.md  05-users-search-and-notifications.md  06-creation-and-interaction.md  07-messagebus.md  08-mobile-integration.md  09-extensions-and-external-services.md  discourse-source-index.md
docs/knowledge/: api-overview.md  discourse-cloudflare-challenge-guide.md  discourse-cookie-session-state-guide.md  discourse-startup-implementation-spec.md  discourse-webview-login-guide.md
docs/release/: README.md  accessibility-audit-checklist.md  app-store-data-collection.md  internal-testing-evidence.md  performance-benchmarks.md  play-store-data-safety.md  play-store-testing-setup.md  privacy-policy.md  privacy-review-evidence.md  release-gate-evidence.md  testflight-setup.md  third-party-licenses.md
native/android-app/: README.md  build.gradle.kts  gradle.properties  (+2 more)
rust/: README.md
rust/crates/fire-core/: Cargo.toml
rust/crates/fire-core/src/: app_state_refresher.rs  config.rs  cookies.rs  creation_payloads.rs  diagnostics.rs  error.rs  json_helpers.rs  lib.rs  logging.rs  notification_payloads.rs  parsing.rs  preloaded_data.rs  presentation.rs  rich_text.rs  search_payloads.rs  session_store.rs  state_observer.rs  sync_utils.rs  topic_payloads.rs  user_payloads.rs  workspace.rs
rust/crates/fire-core/src/core/: auth.rs  auth_strike.rs  cf_challenge.rs  creation.rs  interactions.rs  message_bus.rs  messagebus.rs  mod.rs  network.rs  notifications.rs  persistence.rs  presence.rs  rate_limit.rs  search.rs  session.rs  topics.rs  users.rs
rust/crates/fire-core/tests/: app_state_refresher.rs  auth_strike.rs  interactions.rs  login_finalization.rs  message_bus.rs  messagebus.rs  network.rs  notifications.rs  presence.rs  search_flow.rs  session_flow.rs  startup_alignment.rs
rust/crates/fire-core/tests/common/: mod.rs
rust/crates/fire-uniffi/: Cargo.toml  uniffi.toml
rust/crates/fire-uniffi-session/: Cargo.toml
rust/crates/fire-uniffi-session/src/: lib.rs  records.rs
rust/crates/fire-uniffi-types/: Cargo.toml
rust/crates/fire-uniffi-types/src/: error.rs  lib.rs  panic.rs  runtime.rs  shared.rs
rust/crates/fire-uniffi-types/src/records/: draft.rs  mod.rs  render_block.rs  tag.rs  topic_list.rs
rust/crates/fire-uniffi/src/: error.rs  handle.rs  lib.rs  panic.rs  state_diagnostics.rs  state_messagebus.rs  state_notification.rs  state_search.rs  state_session.rs  state_topic_detail.rs  state_topic_list.rs  state_user.rs
scripts/: check_clean_submodules.sh  collect-licenses.sh  test-release-verifiers.sh  verify-accessibility-audit.sh  verify-internal-testing-evidence.sh  verify-marketing-assets.sh  verify-performance-benchmarks.sh  verify-privacy-review-evidence.sh  verify-release-gates.sh  verify-release-readiness.sh  verify-roadmap-architecture-constraints.sh  verify-roadmap-implementation-evidence.sh  verify-roadmap-p4-acceptance.sh
(+455 files in other folders)
