[package]
name = "fire-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
fire-models = { path = "../fire-models" }
mars-xlog.workspace = true
openwire.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
