[package]
name = "fire-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
fire-models = { path = "../fire-models" }
http.workspace = true
mars-xlog.workspace = true
mars-xlog-core.workspace = true
openwire.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
