[package]
name = "fire-uniffi-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait.workspace = true
fire-core = { path = "../fire-core" }
fire-models = { path = "../fire-models" }
fire-store = { path = "../fire-store" }
fire-uniffi-types = { path = "../fire-uniffi-types" }
serde_json.workspace = true
tokio.workspace = true
uniffi.workspace = true
