[package]
name = "fire-uniffi-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
fire-core = { path = "../fire-core" }
fire-models = { path = "../fire-models" }
futures-util.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uniffi.workspace = true
