[package]
name = "fire-uniffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fire-core = { path = "../fire-core" }
fire-models = { path = "../fire-models" }
thiserror.workspace = true
uniffi.workspace = true
